add task 1 from category haha

--- a/haha/ha.html
+++ b/haha/ha.html
@@ -3,22 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Haha</title>
+    <link rel="stylesheet" type="text/css" href="stylehaha.css">
 </head>
 <body>
-<div id="output"></div>
+<div class="wrap">
 
+    <a href="html/one.html" class="button">Task One</a>
+    <a href="#" class="button">Task Two</a>
+    <a href="#" class="button">Task Three</a>
+    <a href="#" class="button">Task Four</a>
+    <a href="#" class="button">Task Five</a>
+    <a href="#" class="button">Task Six</a>
+    <a href="#" class="button">Task Seven</a>
+    <a href="../index.html" class="button">Back to Main</a>
 
-
-<script>
-
-    var output =  "";
-    for(var i = 10; i >= 0; i--) {
-        output+=i;
-        output+='<br>';
-    };
-
-    var outputContainer=document.getElementById("output");
-    outputContainer.innerHTML = output;
-</script>
+</div>
 </body>
 </html>
