--- a/haha/html/one.html
+++ b/haha/html/one.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Task one</title>
+    <title>Logs Numbers</title>
     <link rel="stylesheet" type="text/css" href="../styles/style-one.css">
 </head>
 <body>
 <h3>Write a function that logs numbers from 10 to 0.</h3>
 <div class="wrap">
-<button class="button" id="submit">Submit</button>
+<button class="button" id="submit">Complete</button>
 <a href="../../index.html" class="button">Back to Main</a>
 <div id="output"></div>
 </div>
