--- a/haha/html/two.html
+++ b/haha/html/two.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="../styles/style-one.css">
+    <title>Pythagorean theorem</title>
 </head>
 <body>
-
+<h4> Write a function that implements Pythagorean theorem. <br>
+    &radic;<span style="text-decoration:overline;">&nbsp;a<sup>2</sup> + b<sup>2</sup>&nbsp;</span> = c</h4>
+<div>
+    <input id="a" type="number" placeholder="Type some number">
+    <input id="b" type="number" placeholder="Type some number">
+    <button class="button" id='completeButton'>Complete</button>
+</div>
+<div id='output'>
+</div>
+<script src="../js/two.js"></script>
 </body>
 </html>
