--- a/hard/hard.html
+++ b/hard/hard.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="../haha/stylehaha.css">
     <meta charset="UTF-8">
-    <title>Haha</title>
-    <link rel="stylesheet" type="text/css" href="stylehaha.css">
+    <title>Title</title>
 </head>
 <body>
 <div class="wrap">
     <a href="html/one.html" class="button">Task One</a>
     <a href="html/two.html" class="button">Task Two</a>
-    <a href="html/three.html" class="button">Task Three</a>
+    <a href="html/four.html" class="button">Task Four</a>
     <a href="../index.html" class="button">Back to Main</a>
 </div>
 </body>
