--- a/index.html
+++ b/index.html
@@ -6,27 +6,43 @@
     <title>Main Page</title>
     <link rel="stylesheet" type="text/css" href="mainstyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+    <script src="jsmain.js"></script>
 </head>
 <body>
     <h1>JavaScript Intro Lesson Homework</h1>
            <div class="container">
                 <div class="haha box"><a href="haha/ha.html" id="rimshot-hover-sound">Haha</a></div>
-                <div class="easy box" id="hover-easy">Easy</div>
-                <div class="medium box">Medium</div>
-                <div class="hard box">Hard</div>
-                <div class="super-hard box">Super Hard</div>
+                <div class="easy box" ><a href="easy/easy.html" id="hover-easy">Easy</a></div>
+               <div class="medium box"><a href="medium/medium.html" id="hover-medium">Medium</a></div>
+               <div class="hard box"><a href="hard/hard.html" id="hover-hard">Hard</a></div>
+               <div class="super-hard box"><a href="superdh/superhard.html" id="hover-shard">Super Hard</a></div>
            </div>
     <audio id="ha-ha" style="display:none;" controls="controls" preload="auto">
-        <source src="mp3/haha.mp3"></source>
-        Your browser isn't invited for super fun time.
+        <source src="mp3/haha.mp3">
+        Your browser isn't support this file.
     </audio>
 
     <audio id="easy" style="display:none;" controls="controls" preload="auto">
-        <source src="mp3/easy.mp3"></source>
-        Your browser isn't invited for super fun time.
+        <source src="mp3/easy.mp3">
+        Your browser isn't support this file.
+    </audio>
+
+    <audio id="medium" style="display:none;" controls="controls" preload="auto">
+        <source src="mp3/medium.mp3">
+        Your browser isn't support this file.
+    </audio>
+
+    <audio id="hard" style="display:none;" controls="controls" preload="auto">
+        <source src="mp3/hard.wav">
+        Your browser isn't support this file.
+    </audio>
+
+    <audio id="superhard" style="display:none;" controls="controls" preload="auto">
+        <source src="mp3/superhard.wav">
+        Your browser isn't support this file.
     </audio>
 
 
-    <script src="jsmain.js"></script>
+    <!--<script src="jsmain.js"></script>-->
 </body>
 </html>
