--- a/easy/easy.html
+++ b/easy/easy.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="../haha/stylehaha.css">
     <meta charset="UTF-8">
-    <title>Haha</title>
-    <link rel="stylesheet" type="text/css" href="stylehaha.css">
+    <title>EASY</title>
 </head>
 <body>
 <div class="wrap">
