--- a/haha/html/three.html
+++ b/haha/html/three.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="../styles/style-one.css">
+    <title>Convert Celsius into Fahrenheit</title>
 </head>
 <body>
-
+<h4>If you want know temperature in F type in field celsius and push the button "Celsius to Fahrenheit"</h4>
+<section>
+    <input id='celsius' type="number" placeholder="celsius">
+    <input id='fahrenheit' type="number" placeholder="fahrenheit">
+    <button id='fahrenheit-to-celsius' class="button">Fahrenheit to celsius</button>
+    <button id='celsius-to-fahrenheit' class="button">Celsius to fahrenheit</button>
+</section>
+<script src="../js/three.js"></script>
 </body>
 </html>
