improve audio on main page and superhard

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Main Page</title>
     <link rel="stylesheet" type="text/css" href="mainstyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
-    <script src="jsmain.js"></script>
 </head>
 <body>
     <h1>JavaScript Intro Lesson Homework</h1>
@@ -15,7 +14,7 @@
                 <div class="easy box" ><a href="easy/easy.html" id="hover-easy">Easy</a></div>
                <div class="medium box"><a href="medium/medium.html" id="hover-medium">Medium</a></div>
                <div class="hard box"><a href="hard/hard.html" id="hover-hard">Hard</a></div>
-               <div class="super-hard box"><a href="superdh/superhard.html" id="hover-shard">Super Hard</a></div>
+               <div class="super-hard box"><a href="superdh/superhard.html" id="hover-super-hard">Super Hard</a></div>
            </div>
     <audio id="ha-ha" style="display:none;" controls="controls" preload="auto">
         <source src="mp3/haha.mp3">
@@ -43,6 +42,6 @@
     </audio>
 
 
-    <!--<script src="jsmain.js"></script>-->
+    <script src="jsmain.js"></script>
 </body>
 </html>
