--- a/superdh/superhard.html
+++ b/superdh/superhard.html
@@ -5,6 +5,40 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Technical difficalties</h1>
+<audio id="hard" style="display:none;" controls autoplay >
+    <source src="../mp3/music.mp3">
+    Your browser isn't support this file.
+</audio>
+<style>
+    body {
+        background: #54b4e6;
+    }
 
+    h1 {
+        text-align: center;
+        color: 	#ff8000;
+        font: 500 120px/1 'Source Sans Pro', Arial, sans-serif;
+
+        top: 35%;
+        width: 100%;
+
+        text-shadow:     0 1px 0 hsl(30,100%,80%),
+        0 2px 0 hsl(30,100%,75%),
+        0 3px 0 hsl(30,100%,70%),
+        0 4px 0 hsl(30,100%,66%),
+        0 5px 0 hsl(30,100%,64%),
+        0 6px 0 hsl(30,100%,62%),
+        0 7px 0 hsl(30,100%,61%),
+        0 8px 0 hsl(30,100%,60%),
+
+        0 0 5px rgba(0,0,0,.05),
+        0 1px 3px rgba(0,0,0,.2),
+        0 3px 5px rgba(0,0,0,.2),
+        0 5px 10px rgba(0,0,0,.2),
+        0 10px 10px rgba(0,0,0,.2),
+        0 20px 20px rgba(0,0,0,.3);
+    }
+</style>
 </body>
 </html>
