add explenATIONS FOR tasks

--- a/easy/html/one.html
+++ b/easy/html/one.html
@@ -6,6 +6,7 @@
     <title>Returns only pair numbers</title>
 </head>
 <body>
+<p>Write a function that returns only pair numbers.</p>
 <h4>Type numbers and press ok.</h4>
 <div id="output"></div>
 <script src="../js/one.js"></script>
