--- a/medium/html/six.html
+++ b/medium/html/six.html
@@ -6,7 +6,7 @@
     <title>Factorial of a number</title>
 </head>
 <body>
-<h4>This function calculates the factorial of a number.</h4>
+<h4>This function calculates the factorial of a number.</h4><h1>Type numbers ONLY!</h1>
 <div id="factorial"></div>
 <script src="../js/six.js"></script>
 </body>
